Program counter advancing, view registers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required (VERSION 2.6)
 
+set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic")
+
 project(beardmachine)
 
-file(GLOB_RECURSE beardmachine_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
+file(GLOB_RECURSE beardmachine_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
